use text-component to space text on example cards

--- a/main/app-design.html
+++ b/main/app-design.html
@@ -50,8 +50,10 @@
                 <img class="card__image" src="assets/images/app-design/desktop/image-airfilter.jpg"
                   alt="image of webpage with image of truck">
                 <a href="example-1.html" class="card__link">
-                  <h3 class="card__title">Airflter</h3>
-                  <p class="card__text">Solving the problem of poor indoor air quality by filtering the air</p>
+                  <div class="text-component">
+                    <h3 class="card__title">Airflter</h3>
+                    <p class="card__text">Solving the problem of poor indoor air quality by filtering the air</p>
+                  </div>
                 </a>
               </div>
 
@@ -59,8 +61,10 @@
                 <img class="card__image" src="assets/images/app-design/desktop/image-eyecam.jpg"
                   alt="image of webpage with image of two mobile phones">
                 <a href="example-2.html" class="card__link">
-                  <h3 class="card__title">Eyecam</h3>
-                  <p class="card__text">Product that lets you edit your favorite photos and videos at any time</p>
+                  <div class="text-component">
+                    <h3 class="card__title">Eyecam</h3>
+                    <p class="card__text">Product that lets you edit your favorite photos and videos at any time</p>
+                  </div>
                 </a>
               </div>
 
@@ -68,8 +72,11 @@
                 <img class="card__image" src="assets/images/app-design/desktop/image-faceit.jpg"
                   alt="image of webpage with image of a record and earphones">
                 <a href="example-3.html" class="card__link">
-                  <h3 class="card__title">Faceit</h3>
-                  <p class="card__text">Get to meet your favorite internet superstar with the faceit app</p>
+                  <div class="text-component">
+                    <h3 class="card__title">Faceit</h3>
+                    <p class="card__text">Get to meet your favorite internet superstar with the faceit app</p>
+                  </div>
+
                 </a>
               </div>
 
@@ -77,8 +84,10 @@
                 <img class="card__image" src="assets/images/app-design/desktop/image-todo.jpg"
                   alt="image of a desk with chair and bookshelf">
                 <a href="example-4.html" class="card__link">
-                  <h3 class="card__title">Todo</h3>
-                  <p class="card__text">A todo app that features cloud sync with light and dark mode</p>
+                  <div class="text-component">
+                    <h3 class="card__title">Todo</h3>
+                    <p class="card__text">A todo app that features cloud sync with light and dark mode</p>
+                  </div>
                 </a>
               </div>
 
@@ -86,8 +95,10 @@
                 <img class="card__image" src="assets/images/app-design/desktop/image-loopstudios.jpg"
                   alt="image of a wavy line on a graph">
                 <a href="example-5.html" class="card__link">
-                  <h3 class="card__title">Loopstudios</h3>
-                  <p class="card__text">A VR experience app made for Loopstudios</p>
+                  <div class="text-component">
+                    <h3 class="card__title">Loopstudios</h3>
+                    <p class="card__text">A VR experience app made for Loopstudios</p>
+                  </div>
                 </a>
               </div>
 
