--- a/main/graphic-design.html
+++ b/main/graphic-design.html
@@ -50,8 +50,10 @@
                 <img class="card__image" src="assets/images/graphic-design/desktop/image-change.jpg"
                   alt="image of webpage with image of truck">
                 <a href="example-1.html" class="card__link">
-                  <h3 class="card__title">Tim Brown</h3>
-                  <p class="card__text">A book cover designed for Tim Brown’s new release, ‘Change’</p>
+                  <div class="text-component">
+                    <h3 class="card__title">Tim Brown</h3>
+                    <p class="card__text">A book cover designed for Tim Brown’s new release, ‘Change’</p>
+                  </div>
                 </a>
               </div>
 
@@ -59,8 +61,10 @@
                 <img class="card__image" src="assets/images/graphic-design/desktop/image-boxed-water.jpg"
                   alt="image of webpage with image of two mobile phones">
                 <a href="example-2.html" class="card__link">
-                  <h3 class="card__title">Boxed Water</h3>
-                  <p class="card__text">A simple packaging concept made for Boxed Water</p>
+                  <div class="text-component">
+                    <h3 class="card__title">Boxed Water</h3>
+                    <p class="card__text">A simple packaging concept made for Boxed Water</p>
+                  </div>
                 </a>
               </div>
 
@@ -68,8 +72,10 @@
                 <img class="card__image" src="assets/images/graphic-design/desktop/image-science.jpg"
                   alt="image of webpage with image of a record and earphones">
                 <a href="example-3.html" class="card__link">
-                  <h3 class="card__title">Science</h3>
-                  <p class="card__text">A poster made in collaboration with the Federal Art Project</p>
+                  <div class="text-component">
+                    <h3 class="card__title">Science</h3>
+                    <p class="card__text">A poster made in collaboration with the Federal Art Project</p>
+                  </div>
                 </a>
               </div>
 
