refactor design card to increase understanding and use of text-component

--- a/main/app-design.html
+++ b/main/app-design.html
@@ -32,11 +32,14 @@
           </nav>
         </div>
       </section>
+
       <header class="header">
         <div class="container container--width-100@mobile">
-          <div class="design-card | bg-primary | text-component">
-            <h1>App design</h1>
-            <p class="responsive-text">Our mobile designs bring intuitive digital solutions to your customers right at their fingertips.</p>
+          <div class="design-card | bg-primary">
+            <div class="text-component">
+              <h1>App design</h1>
+              <p class="responsive-text">Our mobile designs bring intuitive digital solutions to your customers right at their fingertips.</p>
+            </div>
           </div>
         </div>
       </header>
