--- a/main/app-design.html
+++ b/main/app-design.html
@@ -50,8 +50,7 @@
             <div class="examples__cards">
 
               <div class="example-card">
-                <img class="card__image" src="assets/images/app-design/desktop/image-airfilter.jpg"
-                  alt="image of webpage with image of truck">
+                <img class="card__image" src="assets/images/app-design/desktop/image-airfilter.jpg" alt="image of webpage with image of truck">
                 <a href="example-1.html" class="card__link">
                   <div class="text-component">
                     <h3 class="card__title">Airflter</h3>
@@ -61,8 +60,7 @@
               </div>
 
               <div class="example-card">
-                <img class="card__image" src="assets/images/app-design/desktop/image-eyecam.jpg"
-                  alt="image of webpage with image of two mobile phones">
+                <img class="card__image" src="assets/images/app-design/desktop/image-eyecam.jpg" alt="image of webpage with image of two mobile phones">
                 <a href="example-2.html" class="card__link">
                   <div class="text-component">
                     <h3 class="card__title">Eyecam</h3>
@@ -72,8 +70,7 @@
               </div>
 
               <div class="example-card">
-                <img class="card__image" src="assets/images/app-design/desktop/image-faceit.jpg"
-                  alt="image of webpage with image of a record and earphones">
+                <img class="card__image" src="assets/images/app-design/desktop/image-faceit.jpg" alt="image of webpage with image of a record and earphones">
                 <a href="example-3.html" class="card__link">
                   <div class="text-component">
                     <h3 class="card__title">Faceit</h3>
@@ -84,8 +81,7 @@
               </div>
 
               <div class="example-card">
-                <img class="card__image" src="assets/images/app-design/desktop/image-todo.jpg"
-                  alt="image of a desk with chair and bookshelf">
+                <img class="card__image" src="assets/images/app-design/desktop/image-todo.jpg" alt="image of a desk with chair and bookshelf">
                 <a href="example-4.html" class="card__link">
                   <div class="text-component">
                     <h3 class="card__title">Todo</h3>
@@ -95,8 +91,7 @@
               </div>
 
               <div class="example-card">
-                <img class="card__image" src="assets/images/app-design/desktop/image-loopstudios.jpg"
-                  alt="image of a wavy line on a graph">
+                <img class="card__image" src="assets/images/app-design/desktop/image-loopstudios.jpg" alt="image of a wavy line on a graph">
                 <a href="example-5.html" class="card__link">
                   <div class="text-component">
                     <h3 class="card__title">Loopstudios</h3>
@@ -149,8 +144,8 @@
             </div>
           </div>
         </section>
-
       </main>
+
       <footer class="footer bg-black-light">
         <div class="container">
           <nav class="nav">
