--- a/main/graphic-design.html
+++ b/main/graphic-design.html
@@ -49,8 +49,7 @@
             <div class="examples__cards">
 
               <div class="example-card">
-                <img class="card__image" src="assets/images/graphic-design/desktop/image-change.jpg"
-                  alt="image of webpage with image of truck">
+                <img class="card__image" src="assets/images/graphic-design/desktop/image-change.jpg" alt="image of webpage with image of truck">
                 <a href="example-1.html" class="card__link">
                   <div class="text-component">
                     <h3 class="card__title">Tim Brown</h3>
@@ -60,8 +59,7 @@
               </div>
 
               <div class="example-card">
-                <img class="card__image" src="assets/images/graphic-design/desktop/image-boxed-water.jpg"
-                  alt="image of webpage with image of two mobile phones">
+                <img class="card__image" src="assets/images/graphic-design/desktop/image-boxed-water.jpg" alt="image of webpage with image of two mobile phones">
                 <a href="example-2.html" class="card__link">
                   <div class="text-component">
                     <h3 class="card__title">Boxed Water</h3>
@@ -71,8 +69,7 @@
               </div>
 
               <div class="example-card">
-                <img class="card__image" src="assets/images/graphic-design/desktop/image-science.jpg"
-                  alt="image of webpage with image of a record and earphones">
+                <img class="card__image" src="assets/images/graphic-design/desktop/image-science.jpg" alt="image of webpage with image of a record and earphones">
                 <a href="example-3.html" class="card__link">
                   <div class="text-component">
                     <h3 class="card__title">Science</h3>
